# platonics_vision

./: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
action/: SolveSlider.action
config/: camera.rviz  camera_config.yaml  settings_high_density.json
data/: 0_0_0_150.ply  0_0_0_200.ply  0_0_0_250.ply  0_0_0_350.ply
launch/: depth_camera.launch  global_registration.launch
scripts/: depth_filtering  filter_by_height.py  find_subpcl.py  global_registration_service  iterative_registration_service  iterative_sift_service  parameter_tuning_global_registration.py  reconfigure_filter_values  record_template  run_global_registration.py  save_one_pointcloud_as_ply.py  select_pcl.py  sift_service  slider_solver.py  slider_solver_action_server  static_camera_tf_publisher  triangle_detector.py  triangle_detector_node.py
src/platonics_vision/: global_registration.py  localizer_sift.py  pointcloud_saver.py  sift_template.py  triangle_detection_template.py  triangle_detection_templates.py
srv/: GlobalRegistrationLocalizer.srv  IterativeRegistrationLocalizer.srv  MultiSiftRegistrationLocalizer.srv  SavingTemplate.srv  SiftRegistrationLocalizer.srv
