<?xml version="1.0"?>
<package format="2">
  <name>platonics_vision</name>
  <version>0.0.1</version>
  <description>The platonics_vision package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="m.spahn@tudelft.nl">mspahn</maintainer>
  <license>TODO</license>

  <depend>panda_ros</depend>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>platonics_dataset</depend>
  <depend>realsense2_camera</depend>
  <depend>realsense2_description</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
